[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://Assets/skulls/fullSkullUI.png" type="Texture" id=4]
[ext_resource path="res://Assets/skulls/emptySkullUI.png" type="Texture" id=5]

[node name="HealthUI" type="Control"]
margin_right = 59.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 58.0
margin_bottom = 13.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HEartUIFull" type="TextureRect" parent="."]
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skullsUIEmpty" type="TextureRect" parent="."]
margin_top = 12.0
margin_right = 46.0
margin_bottom = 27.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skullUIFull" type="TextureRect" parent="."]
margin_top = 12.0
margin_bottom = 28.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
